--- a/src/components/RaitingButtons.css
+++ b/src/components/RaitingButtons.css
@@ -1,12 +1,40 @@
+button {
+  -webkit-tap-highlight-color: transparent;
+}
+
 .btns-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.raiting-btns {
+.rating-btns {
   color: hsl(var(--clr-grey-500));
+  font-weight: var(--fw-700);
   background-color: hsl(var(--clr-grey-500)/0.06);
+  width: 50px;
+  height: 50px;
+  padding: .75rem;
+  border-radius: 25px;
+  border: none;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+  transition: background-color 0.15s ease, color 0.15s ease;
+}
+
+.rating-btns:hover {
+  color: hsl(var(--clr-grey-950));
+  background-color: hsl(var(--clr-orange));
+}
+
+.active-rating-btns {
+  background-color: hsl(var(--clr-white));
+  color: hsl(var(--clr-grey-950));
+  font-weight: var(--fw-700);
   width: 50px;
   height: 50px;
   padding: .75rem;
