--- a/src/components/RaitingButtons.css
+++ b/src/components/RaitingButtons.css
@@ -8,10 +8,18 @@ button {
   justify-content: space-between;
 }
 
-.rating-btns {
-  color: hsl(var(--clr-grey-500));
-  font-weight: var(--fw-700);
+.btn-grey {
   background-color: hsl(var(--clr-grey-500)/0.06);
+  color: hsl(var(--clr-grey-500));
+}
+
+.btn-white {
+  background-color: hsl(var(--clr-white));
+  color: hsl(var(--clr-grey-950));
+}
+
+.rating-btns {
+  font-weight: var(--fw-700);
   width: 50px;
   height: 50px;
   padding: .75rem;
@@ -26,24 +34,7 @@ button {
   transition: background-color 0.15s ease, color 0.15s ease;
 }
 
-.rating-btns:hover {
+.btn-grey:hover {
   color: hsl(var(--clr-grey-950));
   background-color: hsl(var(--clr-orange));
-}
-
-.active-rating-btns {
-  background-color: hsl(var(--clr-white));
-  color: hsl(var(--clr-grey-950));
-  font-weight: var(--fw-700);
-  width: 50px;
-  height: 50px;
-  padding: .75rem;
-  border-radius: 25px;
-  border: none;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  cursor: pointer;
 }
