--- a/src/components/RaitingCard.css
+++ b/src/components/RaitingCard.css
@@ -1,12 +1,14 @@
-.submit-container {
+.rating-card-container {
   background-color: hsl(var(--clr-grey-900));
   border-radius: 1.5rem;
   width: min(100%, 380px);
+  min-height: 400px;
   margin-inline: auto;
-  padding: 1rem;
+  padding: 2rem;
   text-align: start;
   
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  justify-content: space-between;
+  gap: 1.5rem;
 }
